fix assets path

--- a/public/assets/css/navigation.scss
+++ b/public/assets/css/navigation.scss
@@ -42,7 +42,7 @@ $navTransition: .5s background-color ease, .5s color ease;
     mask-repeat: no-repeat;
     mask-position: center right;
     mask-size: contain;
-    mask-image: url("assets/img/icons/chevron-right.svg");
+    mask-image: url("../assets/img/icons/chevron-right.svg");
     justify-self: flex-end;
   }
 
