--- a/public/assets/css/customers.scss
+++ b/public/assets/css/customers.scss
@@ -95,7 +95,7 @@
     display: block;
     width: 24px;
     height: 24px;
-    background: url("assets/img/icons/search.svg") no-repeat center / contain;
+    background: url("../assets/img/icons/search.svg") no-repeat center / contain;
   }
 }
 
